# r0p_ctf

./: .gitignore  README.md  help_info.py  pyproject.toml  ropctf.py  run.py
cogs/: cipher.py  configuration.py  ctf.py  ctftime.py  encoding.py  utility.py  writeups.py
