[tool.poetry]
name = "r0p-ctf"
version = "0.1.0"
description = ""
authors = ["fepfitra <fitriansyahekaputra@mail.ugm.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
pymongo = "^4.6.2"
requests = "^2.31.0"
colorama = "^0.4.6"
urllib3 = "^2.2.1"
python-dateutil = "^2.9.0.post0"
dnspython = "^2.6.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
